--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a
                 href="https://jodhpur.rajasthan.gov.in/content/raj/jodhpur/en/home.html#"
                 target="_blank"
-                ><img src="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\maps.png" alt="" class="map">Jodhpur, Rajasthan </a><br />
+                ><img src="maps.png" alt="" class="map">Jodhpur, Rajasthan </a><br />
               <div class="box1">
                 <div class="card1">
                   <a href="sumedhas20@iitk.ac.in" target="_blank"
