--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <link rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
          <link rel="stylesheet"
-         href="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\style.css">
+         href="style.css">
          
     </head>
     <body>
@@ -35,7 +35,7 @@
                 Hi, I am <strong>Sumedha Shekhar</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">A SINGLE DREAM IS MORE POWERFUL THAN A THOUSAND REALITIES.</p>
-            <img src="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\photo.jpg" alt="Picture of Sumedha smiling">
+            <img src="photo.jpg" alt="Picture of Sumedha smiling">
         </div>
             </section>
 
@@ -81,7 +81,7 @@
               </p>
             </div>
             <div class="right1">
-              <img src="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\development.jpeg" alt="Image of Web Development">
+              <img src="development.jpeg" alt="Image of Web Development">
             </div>
         </section>
 
@@ -96,15 +96,15 @@
               <div class="box1">
                 <div class="card1">
                   <a href="sumedhas20@iitk.ac.in" target="_blank"
-                    ><img src="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\mail1.png" alt=""
+                    ><img src="mail1.png" alt=""
                   /></a>
                 </div>
                 <div class="card1">
-                  <a href="https://www.instagram.com/shekharsumedha/" target="_blank"><img src="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\insta.jpg" alt="" /></a>
+                  <a href="https://www.instagram.com/shekharsumedha/" target="_blank"><img src="insta.jpg" alt="" /></a>
                 </div>
                 <div class="card1">
                   <a href="https://www.facebook.com/sumedha.shekhar.5" target="_blank"
-                    ><img src="C:\Users\SUMEDHA SHEKHAR\ACA-FSWD-2021\facebook.png" alt="" /></a>
+                    ><img src="facebook.png" alt="" /></a>
                 </div>
               </div>
             </div>
